tests/ui/invalid_pyfunction_warn.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/invalid_pyfunction_warn.rs:4:12
  |
4 | #[pyo3(warn)]
  |            ^

error: missing `message` in `warn` attribute
 --> tests/ui/invalid_pyfunction_warn.rs:8:13
  |
8 | #[pyo3(warn())]
  |             ^

error: missing `message` in `warn` attribute
  --> tests/ui/invalid_pyfunction_warn.rs:12:65
   |
12 | #[pyo3(warn(category = pyforge::exceptions::PyDeprecationWarning))]
   |                                                                 ^

error: expected string literal
  --> tests/ui/invalid_pyfunction_warn.rs:16:77
   |
16 | #[pyo3(warn(category = pyforge::exceptions::PyDeprecationWarning, message = ,))]
   |                                                                             ^

error: expected identifier
  --> tests/ui/invalid_pyfunction_warn.rs:20:57
   |
20 | #[pyo3(warn(message = "deprecated function", category = ,))]
   |                                                         ^

error: expected `message` or `category`
  --> tests/ui/invalid_pyfunction_warn.rs:24:46
   |
24 | #[pyo3(warn(message = "deprecated function", random_key))]
   |                                              ^^^^^^^^^^

error: #[classattr] cannot be used with #[pyo3(warn)]
  --> tests/ui/invalid_pyfunction_warn.rs:33:12
   |
33 |     #[pyo3(warn(message = "deprecated class attr"))]
   |            ^^^^

error: __traverse__ cannot be used with #[pyo3(warn)]
  --> tests/ui/invalid_pyfunction_warn.rs:41:12
   |
41 |     #[pyo3(warn(message = "deprecated __traverse__"))]
   |            ^^^^
